<resources>
    <string name="app_name">calculadoraModo1</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">x</string>
    <string name="division">/</string>
    <string name="enter">=</string>
    <string name="yX">pot</string>
    <string name="reciproca">1/x</string>
    <string name="raizcuadrada">x2</string>
    <string name="raizEnesima">YsqrtX</string>
    <string name="log">10xLOG</string>
    <string name="ln">eX ln</string>
    <string name="eX">LN</string>
    <string name="pot10">10X</string>
    <string name="campo">Hi, how you doin!</string>
</resources>
